RESOLVED FIXED77489
[CG] Failing 2d.shadow.enable.off.2.html on Lion
https://bugs.webkit.org/show_bug.cgi?id=77489
Summary [CG] Failing 2d.shadow.enable.off.2.html on Lion
Matthew Delaney
Reported 2012-01-31 16:07:49 PST
The Philip canvas test named 2d.shadow.enable.off.2.html is currently skipped and otherwise failing on Lion. It tests that shadows aren't drawn under certain conditions as outlined in the canvas spec currently. This bug is for adding that check in. This part of the spec may change in the future since it's under discussion (see: https://bugs.webkit.org/show_bug.cgi?id=60091) though it's been agreed to leave the spec as-is for now, thus we should conform to it especially since it's a reasonable check to add in.
Attachments
Patch (6.05 KB, patch)
2012-01-31 16:31 PST, Matthew Delaney
mitz: review+
Matthew Delaney
Comment 1 2012-01-31 16:31:42 PST
mitz
Comment 2 2012-01-31 17:00:32 PST
Comment on attachment 124844 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=124844&action=review > Source/WebCore/html/canvas/CanvasRenderingContext2D.h:281 > + bool shouldDrawShadows(); This can be const.
Matthew Delaney
Comment 3 2012-01-31 17:21:37 PST
Note You need to log in before you can comment on or make changes to this bug.