Failing 2d.shadow.enable.off.2.html on Lion https://bugs.webkit.org/show_bug.cgi?id=77489

Reviewed by Dan Bernstein.

Source/WebCore: 

The canvas spec requires that shadows not be drawn under certain
circumstances outlined here: http://www.whatwg.org/specs/web-apps/current-work/#shadows
This patch adds in those checks which allows us to pass now (on Lion)
the philip canvas test that was checking that constraint.

No new tests. Unskipping the test on Lion that this patch fixes.

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::setAllAttributesToDefault):
(WebCore::CanvasRenderingContext2D::setShadow):
(WebCore::CanvasRenderingContext2D::applyShadow):
(WebCore::CanvasRenderingContext2D::shouldDrawShadows):
* html/canvas/CanvasRenderingContext2D.h:
(CanvasRenderingContext2D):

LayoutTests: 

* platform/mac-lion/Skipped: We can unskip this test now that this patch has us passing this test.


git-svn-id: svn://svn.chromium.org/blink/trunk@106415 bbb929c8-8fbe-4397-9dbb-9b2b20218538