third_party/WebKit/Source/WebCore/html/canvas/CanvasRenderingContext2D.h
@@ -279,6 +279,7 @@ private:
     const State& state() const { return m_stateStack.last(); }
 
     void applyShadow();
+    bool shouldDrawShadows() const;
 
     void didDraw(const FloatRect&, unsigned options = CanvasDidDrawApplyAll);
     void didDrawEntireCanvas();
